--- a/shopping-site/.vscode/launch.json
+++ b/shopping-site/.vscode/launch.json
@@ -5,21 +5,14 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch",
       "type": "node",
       "request": "launch",
-      "name": "Test",
-      "runtimeExecutable": "npm",
-      "runtimeArgs": [
-        "run",
-        "test"
-      ],
-      "port": 9229
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}/index.js"
+      "program": "${workspaceRoot}/node_modules/protractor/bin/protractor",
+      "stopOnEntry": false,
+      "args": [
+        "${workspaceRoot}/conf.js"
+      ]
     }
   ]
 }
